--- a/src/stories/assets/theme.css
+++ b/src/stories/assets/theme.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-* {
+*:not(.pi) {
   font-family: 'Open Sans', sans-serif !important;
 }
 
