--- a/src/stories/assets/theme.css
+++ b/src/stories/assets/theme.css
@@ -1,7 +1,39 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600);
 
 *:not(.pi) {
   font-family: 'Open Sans', sans-serif !important;
+}
+
+h1, h2, h3, h4, h5 {
+  line-height: 1.25px;
+}
+
+h1, h2, h3 {
+  font-weight: 400 !important;
+}
+
+h4, h5 {
+  font-weight: 600 !important;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  font-size: 24px;
+}
+
+h5 {
+  font-size: 20px;
 }
 
 :root {
