--- a/src/stories/assets/theme.css
+++ b/src/stories/assets/theme.css
@@ -5,7 +5,8 @@
 }
 
 h1, h2, h3, h4, h5 {
-  line-height: 1.25px;
+  margin-top: 5px;
+  line-height: 1.25em !important;
 }
 
 h1, h2, h3 {
@@ -17,23 +18,23 @@ h4, h5 {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 48px !important;
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 36px !important;
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 30px !important;
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 24px !important;
 }
 
 h5 {
-  font-size: 20px;
+  font-size: 20px !important;
 }
 
 :root {
